package org.wavelabs.soundscope.use_cases.saveRecording;

public interface SaveRecordingOB {
    /**
     * Saving recording complete.
     * Present the according view.
     */
    void presentSaveSuccessView();
}
